--- a/css/main.css
+++ b/css/main.css
@@ -860,9 +860,99 @@ input[type=radio]:checked + .review-mark-label {
   position: absolute;
   z-index: 0;
   opacity: 0;
-  width:100%;
+  width:80%;
   height:100%;
 
   left: 0;
   top: 0;
+}
+
+.error-message {
+  position: fixed;
+  z-index: 10;
+  top: 20px;
+  left: 50%;
+
+  box-sizing: border-box;
+  width: 80%;
+  min-height: 40px;
+  padding-top: 20px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+
+  font-size: 25px;
+  line-height: 25px;
+  color: rgba(255, 178, 0, .9);
+  vertical-align: middle;
+  text-align: center;
+
+  background-image: repeating-linear-gradient(-45deg, rgba(255, 0, 0, .2) 0px, rgba(255, 0, 0, .2) 10px, rgba(255, 0, 0, .6) 10px, rgba(255, 0, 0, .6) 20px);
+  border: 1px solid rgba(255, 0, 0, .9);
+  border-radius: 10px;
+  transform: translateX(-50%);
+
+  transition-property: box-shadow;
+  transition-duration: 0.15s;
+}
+
+.error-message:hover {
+  box-shadow: 0 0 50px rgba(255, 255, 0, .8);
+}
+
+.error-message-button {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  width: 27px;
+  height: 27px;
+  margin: 0;
+  padding: 0;
+
+  background-color: transparent;
+  border: 1px solid rgba(255, 178, 0, .9);
+  border-radius: 3px;
+
+  transition-property: box-shadow;
+  transition-duration: .15s;
+}
+
+.error-message-button::before,
+.error-message-button::after {
+  content: '';
+  position: absolute;
+  top: 0;
+
+  width: 30px;
+  height: 4px;
+
+  background-color: rgba(255, 178, 0, .9);
+  border-radius: 2px;
+
+  transition-property: box-shadow;
+  transition-duration: .15s;
+}
+
+.error-message-button::before {
+  left: 2px;
+
+  transform-origin: left;
+  transform: rotate(45deg);
+}
+
+.error-message-button::after {
+  right: 2px;
+
+  transform-origin: right;
+  transform: rotate(-45deg);
+}
+
+.error-message-button:hover {
+  box-shadow: 0 0 8px #ffffff;
+}
+
+.error-message-button:hover::before,
+.error-message-button:hover::after {
+  box-shadow: 0 0 5px #ffffff;
 }
